# codecrafters-shell-rust

./: .gitignore  Cargo.toml  README.md  text.txt
.codecrafters/: run.sh
src/: handle_command.rs  input_parsing.rs  invoke.rs  lib.rs  main.rs  readline.rs  trie.rs  util.rs
src/commands/: mod.rs  resolve.rs
src/commands/builtin/: fs.rs  history.rs  invoke.rs  mod.rs  string.rs
src/completion/: completer.rs  error.rs  mod.rs  trie.rs
src/parser/: mod.rs  token.rs  words.rs
src/shell/: builtin_exec.rs  error.rs  exec.rs  handle_command.rs  mod.rs  pipeline.rs  redirect.rs  repl.rs
