[package]
name = "clawsh"
version = "0.3.0"
authors = [
    "Codecrafters <hello@codecrafters.io>",
    "Quinn Cuijpers <Quinn.Cuijpers@gmail.com>",
]
edition = "2024"
rust-version = "1.91"
description = "A shell built in rust for codecrafters"
repository = "https://github.com/QuinnCuijpers/clawsh"
license = "MIT OR Apache-2.0"


[dependencies]
faccess = "0.2.4"
rustyline = { version = "18.0.0", features = ["derive", "with-file-history"] }
thiserror = "2.0.18"                                                           # error handling

[lints.rust]
missing_docs = "warn"


[lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[[bin]]
name = "clawsh"
path = "src/main.rs"
